--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "preact": "^8.5.2",
     "preact-compat": "^3.17.0",
     "preact-render-to-string": "^4.1.0",
-    "unistore": "^3.5.1"
+    "unistore": "^3.5.1",
+    "if-env": "^1.0.0"
   }
 }
