--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "preact": "^8.5.2",
+    "if-env": "^1.0.0",
+    "preact": "^8.5.3",
     "preact-compat": "^3.17.0",
     "preact-render-to-string": "^4.1.0",
-    "unistore": "^3.5.1",
-    "if-env": "^1.0.0"
+    "unistore": "^3.5.1"
   }
 }
