--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "preact-cli": "^2.0.0"
   },
   "dependencies": {
+    "preact-cli": "^2.0.0",
     "bootstrap": "^4.4.1",
     "if-env": "^1.0.0",
     "preact": "^8.5.3",
